Removido respuestas, opciones, corregidos tests, removidos getfirst/removefirst, planteadas las bases de FabricaModificadores y FabricaOpciones, corregidos errores menores de mensajes mal escritos o mal copiados, borrados los Mock