@@ -1,23 +1,18 @@
 package edu.fiuba.algo3.testEntrega2.Pregunta;
 
-import edu.fiuba.algo3.modelo.Respuestas.RespuestasConcretas;
-import edu.fiuba.algo3.modelo.modificadores.Modificadores;
-import edu.fiuba.algo3.modelo.opciones.Opciones;
-import edu.fiuba.algo3.modelo.opciones.Simples;
+import edu.fiuba.algo3.modelo.Fabricas.FabricaOpciones;
+import edu.fiuba.algo3.modelo.Fabricas.FabricaModificadores;
+
+
+import edu.fiuba.algo3.modelo.opcion.Opcion;
 import edu.fiuba.algo3.modelo.pregunta.Pregunta;
 import edu.fiuba.algo3.modelo.pregunta.VerdaderoFalso;
 import edu.fiuba.algo3.modelo.puntaje.Parcial;
-import edu.fiuba.algo3.modelo.Respuestas.respuesta.Respuesta;
-import edu.fiuba.algo3.modelo.opciones.opcion.estado.Correcta;
-import edu.fiuba.algo3.modelo.opciones.opcion.estado.Incorrecta;
+import edu.fiuba.algo3.modelo.Respuesta.Respuesta;
 import edu.fiuba.algo3.modelo.jugador.Jugador;
 import edu.fiuba.algo3.modelo.modificadores.ModificadorPuntaje.ModificadorPuntaje;
-import edu.fiuba.algo3.modelo.modificadores.ModificadorPuntaje.NuloPuntaje;
-import edu.fiuba.algo3.modelo.opciones.opcion.Opcion;
-import edu.fiuba.algo3.modelo.opciones.opcion.Simple;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 
 import org.junit.jupiter.api.BeforeAll;
@@ -31,8 +26,8 @@ public class MultipleChoiceTest {
     private static Parcial parcial;
     private ModificadorPuntaje nulo;
     private List<ModificadorPuntaje> modificadores;
-    private Simples opciones;
-    private RespuestasConcretas respuestas;
+    private List<Opcion> opciones;
+    private List<Respuesta> respuestas;
 
     @BeforeAll
     public static void setUpClass() {
@@ -41,9 +36,9 @@ public class MultipleChoiceTest {
 
     @BeforeEach
     public void setUp() {
-        List<ModificadorPuntaje> modificadores= Modificadores.obtenerListaModificadoresPuntaje();
+        List<ModificadorPuntaje> modificadores= FabricaModificadores.obtenerListaModificadoresPuntaje();
 
-        nulo = modificadores.getFirst();
+        nulo = modificadores.get(0);
 
         jugador1 = new Jugador("Jugador 1", modificadores);
         jugador2 = new Jugador("Jugador 2", modificadores);
@@ -51,8 +46,8 @@ public class MultipleChoiceTest {
         List<String> opcionesTexto= List.of("Opcion 1", "Opcion 2", "Opcion 3");
         List<String> posicionesCorrectas= List.of("1", "2");
 
-        respuestas=new RespuestasConcretas();
-        opciones=new Simples(opcionesTexto,posicionesCorrectas);
+        respuestas=new ArrayList<>();
+        opciones= FabricaOpciones.crearListaSimple(opcionesTexto,posicionesCorrectas);
 
     }
 
@@ -65,8 +60,9 @@ public class MultipleChoiceTest {
                 opciones,       parcial, "Tema"
         );
 
-        Opciones opcionesJugador=pregunta.crearCopiaOpciones(List.of("Opcion 1", "Opcion 2"));
-        respuestas.agregar(opcionesJugador,jugador1,nulo);
+        List<Opcion> opcionesJugador=FabricaOpciones.crearListaSimple(List.of("Opcion 1", "Opcion 2"),List.of("1", "2"));
+        Respuesta respuesta= new Respuesta(opcionesJugador,jugador1, nulo);
+        respuestas.add(respuesta);
 
         //Act
         pregunta.asignarPuntajes(respuestas);
@@ -84,8 +80,9 @@ public class MultipleChoiceTest {
                 opciones,       parcial, "Tema"
         );
 
-        Opciones opcionesJugador=pregunta.crearCopiaOpciones(List.of("Opcion 1", "Opcion 3"));
-        respuestas.agregar(opcionesJugador,jugador1,nulo);
+        List<Opcion> opcionesJugador=FabricaOpciones.crearListaSimple(List.of("Opcion 1", "Opcion 3"),List.of("1"));
+        Respuesta respuesta= new Respuesta(opcionesJugador,jugador1, nulo);
+        respuestas.add(respuesta);
 
         //Act
         pregunta.asignarPuntajes(respuestas);
